# coolerWidget

./: .gitignore  README.md  pyproject.toml  roadmap.md
.github/workflows/: pylint.yml
src/coolerwidget/: main.py
src/coolerwidget/controllers/: main_controller.py
src/coolerwidget/core/: __init__.py  hardware_monitor.py  services.py  thermal_service.py
src/coolerwidget/ui/: main_widget.py
tests/: test_hardware_monitor.py  test_thermal_service.py
